[package]
name = "dht-data"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rouille = "*"
chrono = { version = "0.4.22", features = ["serde"] }
chrono-tz = "0.6.3"
dirs = "4.0.0"

[features]
pm2logs = []